--- a/basic_sentence_patterns_1.css
+++ b/basic_sentence_patterns_1.css
@@ -34,7 +34,7 @@ a {
     border-top: solid 2px rgb(222, 222, 222);
 }
 
-#EzChineseP {
+#GlowKidsP {
     padding-top: 0px;
     float: left;
     /* border: solid red; */
@@ -45,7 +45,7 @@ a {
     color: white;
 }
 
-#EzChineseImgHref {
+#GlowKidsImgHref {
     margin: -40px;
     padding-left: 30px;
     padding-right: 10px; 
@@ -86,7 +86,7 @@ a {
     z-index: 4;
 }
 
-#belajarSusunan {
+#studyArrangement {
     font-size: 40px;
     margin-left: 5%;
     position: absolute;
@@ -110,7 +110,7 @@ a {
     margin-left: 60px;
 }
 
-.Struktur{
+.Structure1{
     width: 500px;
     height: 50px;
     margin-left: 100px;
@@ -118,7 +118,7 @@ a {
     border: solid grey;
 }
 
-#pola1{
+#pattern1{
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 20px;
     color: rgb(60, 60, 60);
@@ -126,35 +126,35 @@ a {
     margin-left: 60px;
 }
 
-#mengapaPerlu{
+#necessary{
     margin-bottom: 0px;
     font-size: 24px;
 }
 
-#strukturKalimat{
+#sentenceStructure{
     margin-left: 60px;
     margin-top: 0px;
 }
 
-#merupakanUl{
+#partl{
     margin-left: 90px;
 }
 
-#bagianYang{
+#part2{
     margin-left: 60px;
 }
 
-#subjekPredikatTitle{
+#subjectPredicateTitle{
     margin-left: 60px;
     font-size: 30px;
 }
 
-#struktur{
+#structure{
     margin-left: 60px;
     font-size: 20px;
 }
 
-#pola2{
+#pattern2{
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 20px;
     color: rgb(60, 60, 60);
@@ -171,7 +171,7 @@ table, th, td{
     margin-left: 60px;
 }
 
-#subjekKataKerja{
+#subjectVerb{
     margin-left: 60px;
     font-size: 30px;
     padding-top: 100px;
