--- a/pronounciation.css
+++ b/pronounciation.css
@@ -33,7 +33,7 @@ a {
     border-top: solid 2px rgb(222, 222, 222);
 }
 
-#EzChineseP {
+#GlowKidsP {
     padding-top: 0px;
     float: left;
     /* border: solid red; */
@@ -44,7 +44,7 @@ a {
     color: white;
 }
 
-#EzChineseImgHref {
+#GlowKidsImgHref {
     margin: -40px;
     padding-left: 30px;
     padding-right: 10px; 
@@ -89,7 +89,7 @@ a {
     z-index: 4;
 }
 
-#belajarSusunan {
+#studyArrangement {
     font-size: 40px;
     margin-left: 5%;
     position: absolute;
