--- a/vocab_HSK1_1.css
+++ b/vocab_HSK1_1.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500&display=swap');
 
-.pilihHSK{
+.selectHSK{
     
     border: none;
     cursor: pointer;
@@ -17,11 +17,11 @@
     border-radius: 30px;
 }
 
-.pilihHSK:hover{
+.selectHSK:hover{
     background-color: rgb(51, 139, 220);
 }
 
-.pilihHSKA{
+.selectHSKA{
     color: white;
 }
 
@@ -58,7 +58,7 @@ a {
     border-top: solid 2px rgb(222, 222, 222);
 }
 
-#EzChineseP {
+#GlowKidsP {
     padding-top: 0px;
     float: left;
     /* border: solid red; */
@@ -69,7 +69,7 @@ a {
     color: white;
 }
 
-#EzChineseImgHref {
+#GlowKidsImgHref {
     margin: -40px;
     padding-left: 30px;
     padding-right: 10px; 
@@ -140,7 +140,7 @@ tr, td {
     padding-right: 60px
 }
 
-#daftarKosakata{
+#vocabList{
     margin-left: 25%;
     font-size: 40px;
 }
@@ -150,7 +150,7 @@ tr, td {
     padding-bottom: 50px;
 }
 
-#halamanSelanjutnya {
+#nextPage {
     margin-left: 475px;
 }
 
