--- a/vocab_HSK2_3.css
+++ b/vocab_HSK2_3.css
@@ -15,7 +15,7 @@ header{
     background-color: rgb(35,83,144);
 }
 
-.pilihHSK{
+.selectHSK{
     
     border: none;
     cursor: pointer;
@@ -32,11 +32,11 @@ header{
     border-radius: 30px;
 }
 
-.pilihHSK:hover{
+.selectHSK:hover{
     background-color: rgb(51, 139, 220);
 }
 
-.pilihHSKA{
+.selectHSKA{
     color: white;
 }
 
@@ -58,7 +58,7 @@ a {
     border-top: solid 2px rgb(222, 222, 222);
 }
 
-#EzChineseP {
+#GlowKidsP {
     padding-top: 0px;
     float: left;
     /* border: solid red; */
@@ -69,7 +69,7 @@ a {
     color: white;
 }
 
-#EzChineseImgHref {
+#GlowKidsImgHref {
     margin: -40px;
     padding-left: 30px;
     padding-right: 10px; 
@@ -140,7 +140,7 @@ tr, td {
     padding-right: 60px
 }
 
-#daftarKosakata{
+#voacbList{
     margin-left: 25%;
     font-size: 40px;
 }
@@ -150,7 +150,7 @@ tr, td {
     padding-bottom: 50px;
 }
 
-#halamanSelanjutnya {
+#nextPage {
     margin-left: 475px;
 }
 
