--- a/word_with_shi.css
+++ b/word_with_shi.css
@@ -33,7 +33,7 @@ a {
     border-top: solid 2px rgb(222, 222, 222);
 }
 
-#EzChineseP {
+#GlowKidsP {
     padding-top: 0px;
     float: left;
     /* border: solid red; */
@@ -44,7 +44,7 @@ a {
     color: white;
 }
 
-#EzChineseImgHref {
+#GlowKidsImgHref {
     margin: -40px;
     padding-left: 30px;
     padding-right: 10px; 
@@ -81,7 +81,8 @@ a {
     z-index: 4;
 }
 
-#belajarSusunan {
+#learnArr
+ {
     font-size: 40px;
     margin-left: 5%;
     position: absolute;
@@ -105,16 +106,16 @@ a {
     margin-left: 60px;
 }
 
-#menghubungkanKata{
+#connectWord{
     font-size: 25px;
     margin-bottom: 0px;
 }
 
-#shiMerupakan{
+#shiForm{
     margin-top: 0px;
 }
 
-.Struktur{
+.Structure{
     width: 500px;
     height: 50px;
     margin-left: 100px;
@@ -126,7 +127,7 @@ a {
     padding-top: 0px;
 }
 
-.Struktur{
+.Structure{
     width: 500px;
     height: 50px;
     margin-left: 50px;
