--- a/style.css
+++ b/style.css
@@ -48,7 +48,11 @@ a {
 #GlowKidsImgHref {
     margin: -40px;
     padding-left: 30px;
-    padding-right: 10px; 
+    padding-right: 50px; 
+}
+
+.name{
+    padding-left: 10px;
 }
 
 #navBar {
