--- a/vocab_HSK3_7.css
+++ b/vocab_HSK3_7.css
@@ -58,7 +58,7 @@ a {
     border-top: solid 2px rgb(222, 222, 222);
 }
 
-#EzChineseP {
+#GlowKidsP {
     padding-top: 0px;
     float: left;
     /* border: solid red; */
@@ -69,10 +69,10 @@ a {
     color: white;
 }
 
-#EzChineseImgHref {
+#GlowKidsImgHref {
     margin: -40px;
     padding-left: 30px;
-    padding-right: 10px; 
+    padding-right: 50px; 
 }
 
 #navBar {
