--- a/style.css
+++ b/style.css
@@ -286,6 +286,10 @@ a {
     padding-bottom: 50px;
 }
 
+#VidImgDiv:hover{
+    transform: scale(1.1);
+}
+
 .VidImg {
     width: 270px;
     border-radius: 10px 10px 0px 0px;
