--- a/vocab_HSK3_10.css
+++ b/vocab_HSK3_10.css
@@ -15,7 +15,7 @@ header{
     background-color: rgb(35,83,144);
 }
 
-.pilihHSK{
+.selectHSK{
     
     border: none;
     cursor: pointer;
@@ -32,11 +32,11 @@ header{
     border-radius: 30px;
 }
 
-.pilihHSK:hover{
+.selectHSK:hover{
     background-color: rgb(51, 139, 220);
 }
 
-.pilihHSKA{
+.selectHSKA{
     color: white;
 }
 
@@ -140,7 +140,7 @@ tr, td {
     padding-right: 60px
 }
 
-#daftarKosakata{
+#vocabList{
     margin-left: 25%;
     font-size: 40px;
 }
@@ -150,7 +150,7 @@ tr, td {
     padding-bottom: 50px;
 }
 
-#halamanSelanjutnya {
+#nextPage {
     margin-left: 475px;
 }
 
